# pacomb

./: .gitignore  .travis.yml  Makefile  README.md  calc.ml  combinator.ml  dune  dune-project  grammar.ml  input.mli  lex.ml  lex.mli  pacomb.earley  pacomb.opam  test.ml  test.sh
.github/workflows/: build_and_test.yml  main.yml
benchmarks/: bench.sh  dune  lexer.mll  parser.mly  seq.ml
benchmarks/calc/: calc.ml  dune  ext.ml  ext2.ml  parser.mly  prio.ml  simple.ml
benchmarks/sexp/: ast.ml  dune  err.ml  lr.ml  parser.mly  rr.ml  sexp.ml
doc/html/: Assoc.Make.html  Assoc.S.html  Assoc.Ty.html  Assoc.html  Charset.html  Combinator.html  Container.Make.html  Container.Param.html  Container.Ref.html  Container.html  Earley.html  Grammar.html  Input.Preprocessor.html  Input.Tbl.html  Input.WithPP.html  Input.html  Lex.html  Position.html  Regexp.html  Utils.EqHashtbl.html  Utils.Option.html  Utils.html  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Assoc.Make.html  type_Assoc.S.html  type_Assoc.Ty.html  type_Assoc.html  type_Charset.html  type_Combinator.html  type_Container.Make.html  (+15 more)
doc/latex/: pacomb.aux  pacomb.tex  pacomb.toc
examples/: calc.ml  calc_ext.ml  calc_ext2.ml  calc_prio.ml  catalan.ml  dune  paragraphs.ml  sexp.ml  test_ext2.txt
lib/: assoc.ml  assoc.mli  bench.ml  blank.ml  blank.mli  charset.ml  charset.mli  comb.ml  comb.mli  combinator.ml  combinator.mli  container.ml  container.mli  dune  earley.ml  earley.mli  grammar.ml  grammar.mli  hashtbl_eq.ml  hashtbl_eq.mli  heap.ml  heap.mli  index.mld  input.ml  input.mli  interpolate.ml  interpolate.mli  keywords.ml  lex.ml  lex.mli  pos.ml  pos.mli  position.ml  position.mli  regexp.ml  regexp.mli  rope.ml  utf8.ml  utf8.mli  utils.ml  (+3 more)
ppx/: dune  pacombPpx.ml  parserPpx.ml  ppx.ml  ppx_pacomb.ml
tests/: Break.ml  bench.sh  big_expr.ml  calc.ml  calc_ext.ml  calc_ext_bench.ml  calc_factor.ml  calc_prio.ml  calc_utf8.ml  dseq_test.ml  dune  hard.ml  nested.ml  ppx_test.ml  scan.ml  sexp.ml  sexp_rr.ml  test.ml
tests/calc_yacc/: calc.ml  dune  lexer.mll  parser.mly
tools/: sanity_check.sh
