synopsis: "Parsing library based on Earley Algorithm"
description:
"""
Pacomb is a tool to build grammars and compile them to combinators before
parsing.  It also provides a ppx extension to write parsers. Grammars as
first class ocaml values together with good performaces and concise code make
Pacomb a very promising solution to write languages in OCaml.
"""

opam-version: "2.0"
maintainer: "Christophe Raffalli <christophe@raffalli.eu>"
bug-reports: "https://github.com/craff/pacomb/issues"
homepage: "https://github.com/craff/pacomb"
dev-repo: "git+https://github.com/craff/pacomb.git"
authors: [
  "Christophe Raffalli <christophe@raffalli.eu>"
  "Rodolphe Lepigre <rodolphe.lepigre@inria.fr>" ]
license: "CeCILL-B_V1"

depends: [
  "ocaml" { >= "4.03.0" }
  "dune"  { build & >= "1.2.0" }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
run-test: [ [ "dune" "runtest" "-p" name "-j" jobs ] ]
