synopsis: "Parsing library based on Earley Algorithm"
description:
"""
Pacomb is a parsing library that compile grammars to combinators prior to
parsing. It provides a PPX extension to write parsers. Grammars as first
class values together with good performaces make Pacomb a promising solution
to write languages in OCaml.
"""

opam-version: "2.0"
maintainer: "Christophe Raffalli <christophe@raffalli.eu>"
bug-reports: "https://github.com/craff/pacomb/issues"
homepage: "https://github.com/craff/pacomb"
dev-repo: "git+https://github.com/craff/pacomb.git"
authors: [
  "Christophe Raffalli <christophe@raffalli.eu>"
  "Rodolphe Lepigre <lepigre@mpi-sws.org>" ]
license: "MIT"

depends: [
  "ocaml" { >= "4.04.0" }
  "dune"  { build & >= "1.2.0" }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
run-test: [ [ "dune" "runtest" "-p" name "-j" jobs ] ]
