(test
  (name calc)
  (modules calc)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (deps ../tests/big_expr.exe calc.exe)
  (action
    (system "../tests/big_expr.exe 4 4 4 | ./calc.exe")))

(test
  (name calc_prio)
  (modules calc_prio)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (deps ../tests/big_expr.exe calc_prio.exe)
  (action
    (system "../tests/big_expr.exe 4 4 4 | ./calc_prio.exe")))

(test
  (name calc_ext)
  (modules calc_ext)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (deps ../tests/big_expr.exe calc_ext.exe)
  (action
    (system "../tests/big_expr.exe 3 4 4 | ./calc_ext.exe")))

(test
  (name calc_ext2)
  (modules calc_ext2)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (deps ../tests/big_expr.exe calc_ext2.exe)
  (action
    (system "echo 'rule 2.0 : Exp 2.0 Str \"*\" Exp 1.9 => Op2 \"*\"\n\
                  rule 2.0 : Exp 2.0 Str \"/\" Exp 1.9 => Op2 \"/\"\n\
                  rule 4.0 : Exp 4.0 Str \"+\" Exp 3.9 => Op2 \"+\"\n\
                  rule 4.0 : Exp 4.0 Str \"-\" Exp 3.9 => Op2 \"-\"\n' && ../tests/big_expr.exe 3 4 4 | ./calc_ext2.exe")))

(test
  (name sexp)
  (modules sexp)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (deps sexp.exe)
  (action
    (system "echo 'a b (c (d e) f) (g h)' | ./sexp.exe")))

(test
  (name paragraphs)
  (modules paragraphs)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (deps paragraphs.exe test.txt)
  (action
    (system "./paragraphs.exe < test.txt")))

(test
  (name catalan)
  (modules catalan)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (deps catalan.exe)
  (action
    (progn
      (system "./catalan.exe 30 2")
      (system "./catalan.exe 30 3"))))
