(test
  (name test)
  (modules test)
  (libraries unix pacomb)
  (action (run ./test.exe)))

(test
  (name hard)
  (modules hard)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (action (run ./hard.exe 1000)))

(test
  (name ppx_test)
  (modules ppx_test)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (action (run ./ppx_test.exe)))

(test
  (name dseq_test)
  (modules dseq_test)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (action (run ./dseq_test.exe)))

(executable
  (name big_expr)
  (modules big_expr)
  (libraries))

(executable
  (name scan)
  (modules scan)
  (libraries unix pacomb))

(test
  (name Break)
  (modules Break)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (deps Break.exe GraphemeBreakTest.txt)
  (action
    (run ./Break.exe ./GraphemeBreakTest.txt)))

(test
  (name calc_factor)
  (modules calc_factor)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (deps big_expr.exe calc_factor.exe)
  (action
    (system "./big_expr.exe 4 4 4 | ./calc_factor.exe")))

(test
  (name calc_utf8)
  (modules calc_utf8)
  (preprocess (pps pacomb.ppx))
  (libraries unix pacomb)
  (deps big_expr.exe calc_utf8.exe)
  (action
    (system "./big_expr.exe 4 4 4 | ./calc_utf8.exe")))
